16 October 2007: Wouter
	- no malloc in log_hex.
	- assertions around system calls.
	- protect against gethostname without ending zero.
	- ntop output is null terminated by unbound.
	- pidfile content null termination
	- various snprintf use sizeof(stringbuf) instead of fixed constant.
	- changed loopdetect % 8 with & 0x7 since % can become negative for
	  weird negative input and particular interpretation of integer math.
	- dname_pkt_copy checks length of result, to protect result buffers.
	  prints an error, this should not happen. Bad strings should have
	  been rejected earlier in the program.
	- remove a size_t underflow from msgreply size func.

15 October 2007: Wouter
	- nicer warning.
	- fix IP6 TCP, wrong definition check. With test package.
	- fixup the fact that the query section was not compressed to,
	  the code was there but was called by value instead of by reference.
	  And test for the case, uses xxd and nc.
	- more portable ip6 check for sockaddr types.

8 October 2007: Wouter
	- --disable-rpath option in configure for 64bit systems with
	  several dynamic lib dirs.

7 October 2007: Wouter
	- fixup tests for no AD bit in non-DO queries.
	- test that makes sure AD bit is not set on non-DO query.

6 October 2007: Wouter
	- removed logfile open early. It did not have the proper permissions;
	  it was opened as root instead of the user. And we cannot change user
	  id yet, since chroot and bind ports need to be done.
	- callback checks for event callbacks done from mini_event. Because
	  of deletions cannot do this from netevent. This means when using
	  libevent the protection does not work on event-callbacks.
	- fixup too small reply (did not zero counts).
	- fixup reply no longer AD bit when query without DO bit.

5 October 2007: Wouter
	- function pointer whitelist.

4 October 2007: Wouter
	- overwrite sensitive random seed value after use.
	- switch to logfile very soon if not -d (console attached).